plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.springframework.cloud.contract' version '4.0.0'
}

group = 'ru.yandex.practicum'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	testImplementation {
		exclude group: 'org.springframework.cloud', module: 'spring-cloud-starter-config'
	}
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.liquibase:liquibase-core'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.2.1'
	implementation 'org.springframework.cloud:spring-cloud-starter-config:4.2.1'
	implementation 'org.springframework.retry:spring-retry:2.0.11'

	implementation 'org.springframework.kafka:spring-kafka'
	implementation 'com.fasterxml.jackson.core:jackson-databind'

	// OAuth2 Client для интеграции с Keycloak
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	// Spring Boot OAuth2 Resource Server
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springframework.security:spring-security-oauth2-jose'


	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'

	//Тестирование
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.mockito:mockito-core'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	testImplementation 'com.h2database:h2'

	// Spring Cloud Contract Verifier (для генерации тестов контрактов)
	testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-verifier:4.2.1'
	testImplementation 'org.springframework.kafka:spring-kafka-test'

}

contracts {
	baseClassForTests = 'ru.yandex.practicum.yaBank.accountsApplicationTest.BaseContractTest' // Указание базового класса для тестов
	contractsDslDir = file("src/test/resources/contracts") // Путь к контрактам
	testFramework = 'JUNIT5' // Использование JUnit 5
}

tasks.named('test') {
	useJUnitPlatform()
}
